--- a/ui/views/table.html
+++ b/ui/views/table.html
@@ -1,3 +1,69 @@
+<button class="back-button">
+    <i class="fas fa-chevron-left"></i>
+</button>
+
 <div class="table">
 
 </div>
+
+<div class="table-bank">
+    Bank
+    <hr>
+    $1005
+</div>
+
+<div class="player-desc first-player-desc">
+    <img src="/img/main.webp" class="player-photo-img user-photo-img" alt="">
+    <label class="player-username-label">gwyrwch</label>
+    <label class="player-balance-label">$987</label>
+</div>
+
+<div class="player-desc second-player-desc">
+    <img src="/img/main.webp" class="player-photo-img" alt="">
+    <label class="player-username-label">grispy</label>
+    <label class="player-balance-label">$1405</label>
+</div>
+
+<div class="player-desc third-player-desc">
+    <img src="/img/main.webp" class="player-photo-img" alt="">
+    <label class="player-username-label">hloya</label>
+    <label class="player-balance-label">$1</label>
+</div>
+
+<div class="player-desc forth-player-desc">
+    <img src="/img/main.webp" class="player-photo-img" alt="">
+    <label class="player-username-label">andrew</label>
+    <label class="player-balance-label">$1302</label>
+</div>
+
+<div class="player-desc fifth-player-desc">
+    <img src="/img/main.webp" class="player-photo-img" alt="">
+    <label class="player-username-label">fedosik</label>
+    <label class="player-balance-label">$1473</label>
+</div>
+
+<div class="player-desc sixth-player-desc">
+    <img src="/img/main.webp" class="player-photo-img" alt="">
+    <label class="player-username-label">ruide</label>
+    <label class="player-balance-label">$9787</label>
+</div>
+
+
+<div class="user-field">
+    <div class="your-balance-value-div">
+        <p class="your-balance-value-p">$987.47</p>
+    </div>
+    <div class="user-buttons-div">
+        <button class="user-field-button" id="foldUserButton">
+            Fold
+        </button>
+        <button class="user-field-button" id="callUserButton">
+            Call
+        </button>
+        <button class="user-field-button" id="raiseUserButton">
+            Raise
+        </button>
+    </div>
+</div>
+
+
