--- a/ui/css/sign_in_up.css
+++ b/ui/css/sign_in_up.css
@@ -19,7 +19,7 @@
     width: 100%;
 }
 
-.form-container {
+.form-container-sign-up .sign-up-form{
     position: absolute;
     left: 42vw;
     top: calc(50vh - 59vh / 2);
@@ -36,6 +36,20 @@
     padding: 2vw 2vw 3vw;
 }
 
+.form-container-sign-up .sign-in-form {
+    position: absolute;
+    left: 42vw;
+    top: calc(50vh - 59vh / 2);
+
+    background-color: rgba(var(--main-dark-color-rgb), 0.95);
+
+    border: 1px var(--main-dark-bg-color) solid;
+    border-radius: 2vh;
+    box-shadow: 0 0 3px var(--form-font-color);
+
+    padding: 2vw 2vw 2vw;
+}
+
 .form-fieldset {
     border: 1px var(--form-font-color) solid;
     border-radius: 2vh;
@@ -47,11 +61,8 @@
     margin-bottom: 1vw;
 }
 
-.form-container label {
+.form-container-sign-up label {
     width: 0;
-
-    font-size: larger;
-    color: var(--form-font-color);
 }
 
 .set-div {
@@ -64,7 +75,7 @@
     margin: 10px 0;
 }
 
-.form-container input {
+.form-container-sign-up input {
     height: 3vh;
     width: 45%;
 
@@ -84,6 +95,14 @@
     font-size: 16px;
     font-family: "Menlo", monospace;
     color: var(--form-font-color);
+}
+
+.form-container-sign-up .sign-in-form input {
+    width: 92%;
+    margin-right: 3%;
+    margin-left: 3%;
+    margin-bottom: 5%;
+    /*width: 100%;*/
 }
 
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
@@ -115,7 +134,7 @@
     margin-top: 1vh;
 }
 
-.form-container input[type=submit] {
+.form-container-sign-up input[type=submit] {
     background-color: var(--form-font-color);
 
     color: var(--white-color);
@@ -124,4 +143,55 @@
     width: 30%;
 
     border-radius: 5px;
+}
+
+.sign-in-up-buttons-div {
+    position: absolute;
+    top: 4vh;
+    left: 13vw;
+
+    display: flex;
+
+    width: 22vw;
+}
+
+.sign-in-up-button {
+    width: 11vw;
+    height: 4vh;
+
+    border: 1px solid var(--main-dark-bg-color);
+    /*box-shadow: 0 0 10px var(--white-color);*/
+
+    background-color: var(--main-dark-bg-color);
+    color: var(--form-font-color);
+}
+
+.sign-in-button {
+    border-top-left-radius: 1vh;
+    border-bottom-left-radius: 1vh;
+    border-right-color: var(--form-font-color);
+}
+
+.sign-up-button {
+    /*border-left: none;*/
+    border-top-right-radius: 1vh;
+    border-bottom-right-radius: 1vh;
+    border-left-color: var(--form-font-color);
+}
+
+.selected-sign-in-up-button {
+    background-color: var(--form-font-color);
+    color: var(--main-dark-bg-color);
+}
+
+.selected-sign-in-button {
+    border-right-color: var(--form-font-color);
+}
+
+.selected-sign-up-button {
+    border-left-color: var(--form-font-color)   ;
+}
+
+#submitButtonSignIn {
+    margin-top: 2%;
 }
