profile with user info and ratiing

--- a/ui/css/index.css
+++ b/ui/css/index.css
@@ -2,7 +2,8 @@
     --main-bg-color: #F7F6FC;
     --main-dark-color-rgb: 247, 246, 252;
     --main-dark-bg-color: #ece9fa;
-    --main-color: #ECF3FB   ;
+    --main-color: #ECF3FB;
+    --main-color-rgb: 236, 243, 251;
     --main-dark-color: #a4c8fa;
     --secondary-color: #8DB5F0;
     --white-color: #ffffff;
