--- a/ui/css/index.css
+++ b/ui/css/index.css
@@ -9,6 +9,7 @@
     --white-color: #ffffff;
     --font-color: #282a58;
     --font-secondary-color: #A4B7D3;
+    --error-color: #ff232d;
 
     --font-size: 18px;
 
