--- a/ui/views/signInUp.html
+++ b/ui/views/signInUp.html
@@ -21,39 +21,45 @@
                 <legend>Sign in info</legend>
                 <div class="set-div">
                     <label for="usernameSignUp"></label>
-                    <input type="text" id="usernameSignUp" placeholder="username">
-                    <label for="usernameSignUpHidden" style="opacity: 0;">Username</label>
-                    <input type="text" id="usernameSignUpHidden" style="opacity: 0">
+                    <input type="text" id="usernameSignUp" placeholder="username" required>
+                    <label for="emailSignUp"></label>
+                    <input type="email" id="emailSignUp" placeholder="email" required>
                 </div>
                 <div class="set-div">
                     <label for="passwordSignUp"></label>
-                    <input type="password" id="passwordSignUp" placeholder="password">
+                    <input type="password" id="passwordSignUp" placeholder="password" required>
                     <label for="passwordConfirmSignUp"></label>
-                    <input type="password" id="passwordConfirmSignUp" placeholder="password repeat">
+                    <input type="password" id="passwordConfirmSignUp" placeholder="password repeat" required>
                 </div>
             </fieldset>
             <fieldset class="form-fieldset">
                 <legend>Personal info</legend>
                 <div class="set-div">
                     <label for="nameSignUp"></label>
-                    <input type="text" id="nameSignUp" placeholder="Name">
+                    <input type="text" id="nameSignUp" placeholder="Name" required>
                     <label for="surnameSignUp"></label>
-                    <input type="text" id="surnameSignUp" placeholder="Surname">
+                    <input type="text" id="surnameSignUp" placeholder="Surname" required>
                 </div>
                 <div class="set-div">
                     <label for="birthdaySignUp"></label>
-                    <input type="date" id="birthdaySignUp" placeholder="Birthday">
+                    <input type="date" id="birthdaySignUp" placeholder="Birthday" required>
                     <label for="passportIDSignUp"></label>
-                    <input type="text" id="passportIDSignUp" placeholder="PassportID">
+                    <input type="text"
+                           id="passportIDSignUp"
+                           placeholder="PassportID"
+                           required
+                           maxlength="9" minlength="9"
+                    >
                 </div>
             </fieldset>
             <fieldset class="form-fieldset">
                 <legend>Contact info</legend>
                 <div class="set-div">
-                    <label for="emailSignUp"></label>
-                    <input type="date" id="emailSignUp" placeholder="Email">
                     <label for="phoneSignUp"></label>
-                    <input type="text" id="phoneSignUp" placeholder="Phone">
+                    <input type="tel" id="phoneSignUp" placeholder="Phone" required>
+
+                    <label for="phoneHiddenSignUp" style="opacity: 0"></label>
+                    <input type="text" id="phoneHiddenSignUp" placeholder="Email" style="opacity: 0">
                 </div>
             </fieldset>
             <div class="submit-div">
@@ -66,10 +72,10 @@
                 <legend>Sign in info</legend>
 
                 <label for="usernameSignIn"></label>
-                <input type="text" id="usernameSignIn" placeholder="username">
+                <input type="text" id="usernameSignIn" placeholder="username" required>
 
                 <label for="passwordSignIn"></label>
-                <input type="password" id="passwordSignIn" placeholder="password">
+                <input type="password" id="passwordSignIn" placeholder="password" required>
             </fieldset>
             <div class="submit-div">
                 <input type="submit" id="submitButtonSignIn" value="Sign in">
