sign in/sign out

--- a/ui/views/profile.html
+++ b/ui/views/profile.html
@@ -21,7 +21,7 @@
     <button title="Payment information" class="payment-info-button">
         <i class="fa fa-credit-card"></i>
     </button>
-    <button title="Sign out">
+    <button title="Sign out" class="sign-out-button">
         <i class="fa fa-arrow-circle-right"></i>
     </button>
 </div>
