--- a/ui/views/signInUp.html
+++ b/ui/views/signInUp.html
@@ -71,8 +71,8 @@
             <fieldset class="form-fieldset">
                 <legend>Sign in info</legend>
 
-                <label for="usernameSignIn"></label>
-                <input type="text" id="usernameSignIn" placeholder="username" required>
+                <label for="emailSignIn"></label>
+                <input type="email" id="emailSignIn" placeholder="email" required>
 
                 <label for="passwordSignIn"></label>
                 <input type="password" id="passwordSignIn" placeholder="password" required>
