--- a/ui/css/menu.css
+++ b/ui/css/menu.css
@@ -37,7 +37,7 @@
 
 .table-cards-container {
     position: absolute;
-    top: 43vh;
+    top: 50vh;
     left: 0;
 
     width: 100%;
@@ -103,7 +103,7 @@
 .start-game-text {
     position: absolute;
     left: 0;
-    top: calc(3vh + 2vw + 20vw);
+    top: calc(3vh + 20vw + 2vw);
 
     width: 100%;
 
@@ -113,4 +113,59 @@
     font-weight: bold;
     font-size: larger;
     color: var(--font-color);
+}
+
+.menu-modal-header-div {
+    color: var(--form-font-color);
+    font-weight: bolder;
+    font-size: larger;
+}
+
+.menu-modal-input {
+    display: block;
+
+    width: calc(100% - 1vw);
+    height: 4vh;
+
+    border-radius: 2vh;
+    border: 1px solid rgba(var(--form-font-color-rgb), 0.7);
+    outline: none;
+
+    margin-bottom: 5%;
+    margin-top: 5%;
+    padding-left: 1vw;
+
+    font-size: calc(var(--font-size) - 1px);
+    color: var(--form-font-color);
+}
+
+
+#gameMenuModal button {
+    width: 7vw;
+    height: 4vh;
+
+    border-radius: 2vw;
+    border: none;
+
+    color: var(--white-color);
+}
+
+#gameMenuModal button:hover {
+    opacity: 0.85;
+}
+
+.start-game-button {
+    background-color: #b4e092;
+}
+
+.cancel-start-game-button {
+    background-color: #F1A0CB;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0;
 }
