--- a/ui/views/menu.html
+++ b/ui/views/menu.html
@@ -2,7 +2,7 @@
     <div class="card-img">
         <img src="/img/main.webp" class="card-profile-img" alt="">
     </div>
-    <i class="fa fa-user-o"></i> <label class="username-menu" >@</label>
+    <i class="fa fa-user-o"></i> <label class="username-menu" ></label>
 </div>
 
 <div class="start-game-text">Start a game!</div>
