--- a/ui/css/profile.css
+++ b/ui/css/profile.css
@@ -379,6 +379,7 @@
 
 .setting-form-container .settings-form {
     display: none;
+    transition: display 2s;
 }
 
 .setting-form-container .settings-form input[type=text], input[type=password]  {
