--- a/ui/views/profile.html
+++ b/ui/views/profile.html
@@ -161,7 +161,7 @@
 </div>
 
 <div class="setting-form-container">
-    <form class="settings-form">
+    <form class="settings-form not-active">
         <fieldset class="form-fieldset">
             <legend>Username update</legend>
             <label for="usernameProfileSettings"></label>
