--- a/ui/views/signInUp.html
+++ b/ui/views/signInUp.html
@@ -13,7 +13,12 @@
         >
             Sign in
         </button>
-        <button class="sign-in-up-button sign-up-button">Sign up</button>
+        <button class="
+            sign-in-up-button
+            sign-up-button"
+        >
+            Sign up
+        </button>
     </div>
     <div class="form-container-sign-up">
         <form class="sign-up-form" style="display: none">
