--- a/ui/css/profile.css
+++ b/ui/css/profile.css
@@ -378,8 +378,20 @@
 }
 
 .setting-form-container .settings-form {
-    display: none;
-    transition: display 2s;
+    /*display: none;*/
+    /*visibility: hidden;*/
+    /*opacity: 0;*/
+    transition: visibility 0s, opacity 1s ease-in-out;
+}
+
+.setting-form-container .active {
+    opacity: 1;
+    visibility: visible;
+}
+
+.setting-form-container .not-active {
+    opacity: 0;
+    visibility: hidden;
 }
 
 .setting-form-container .settings-form input[type=text], input[type=password]  {
