--- a/ui/views/profile.html
+++ b/ui/views/profile.html
@@ -92,8 +92,10 @@
 </div>
 
 <div class="analytics">
-    <div class="user-curve">
+    <div class="user-curve ct-chart ct-perfect-fourth">
+<!--        <div class="">-->
 
+<!--        </div>-->
     </div>
     <div class="rating-top">
         <h3>TOP-5</h3>
