--- a/ui/views/signInUp.html
+++ b/ui/views/signInUp.html
@@ -81,6 +81,7 @@
 
                 <label for="passwordSignIn"></label>
                 <input type="password" id="passwordSignIn" placeholder="password" required>
+                <span class="span-invalid-password-sign-in">invalid password</span>
             </fieldset>
             <div class="submit-div">
                 <input type="submit" id="submitButtonSignIn" value="Sign in">
