--- a/ui/css/menu.css
+++ b/ui/css/menu.css
@@ -29,8 +29,8 @@
 
 .card-profile-img {
     /*max-width: 4vw;*/
-    width: 12vw;
-    height: 12vw;
+    width: 10vw;
+    height: 10vw;
 
     border-radius: 50%;
 }
@@ -155,7 +155,7 @@
 }
 
 .start-game-button {
-    background-color: #b4e092;
+    background-color: var(--success-color);
 }
 
 .cancel-start-game-button {
@@ -168,4 +168,21 @@ input[type=number]::-webkit-outer-spin-button {
     -moz-appearance: none;
     appearance: none;
     margin: 0;
+}
+
+.card-profile .username-menu, .balance-menu {
+    display: block;
+}
+
+.card-profile .balance-menu::after {
+    content: '$';
+}
+
+.card-profile .balance-menu {
+    color: #FFD700;
+}
+
+.card-profile .username-menu {
+    margin-bottom: 1vh;
+    margin-top: -3vh;
 }
