--- a/ui/css/sign_in_up.css
+++ b/ui/css/sign_in_up.css
@@ -112,8 +112,24 @@
     width: 92%;
     margin-right: 3%;
     margin-left: 3%;
+    /*margin-bottom: 5%;*/
+    /*width: 100%;*/
+}
+
+.form-container-sign-up .sign-in-form input[type=email] {
     margin-bottom: 5%;
     /*width: 100%;*/
+}
+
+.span-invalid-password-sign-in {
+    visibility: hidden;
+
+    margin-left: 3%;
+
+    width: 92%;
+
+    font-size: smaller;
+    color: var(--error-color);
 }
 
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
