--- a/ui/views/profile.html
+++ b/ui/views/profile.html
@@ -21,6 +21,9 @@
     <button title="Payment information" class="payment-info-button">
         <i class="fa fa-credit-card"></i>
     </button>
+    <button title="Add money" class="add-money-button">
+        <i class="fa fa-plus"></i>
+    </button>
     <button title="Sign out" class="sign-out-button">
         <i class="fa fa-arrow-circle-right"></i>
     </button>
